# trading-system

./: .env.example  .gitignore  CMakeLists.txt  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.example
config/prometheus/: prometheus.yml
docker/: Dockerfile.dev
include/common/: Config.h
include/containers/: BackoffStrategy.h  ContainerTraits.h  LockFreeContainers.h  MemoryManager.h  Statistics.h
include/controllers/: HealthController.h
include/memory/: GarbageCollector.h  MemoryPool.h  PoolMemoryResource.h
include/models/: BaseModel.h  MarketData.h  ModelFactory.h  ModelManager.h  Order.h  Trade.h  TradingSignal.h  User.h  UserSettings.h
include/models/factories/: MarketDataFactory.h  OrderFactory.h  TradeFactory.h  TradingSignalFactory.h  UserFactory.h  UserSettingsFactory.h
include/models/mappers/: BaseMapper.h  MarketDataMapper.h  OrderMapper.h  TradeMapper.h  TradingSignalMapper.h  UserMapper.h  UserSettingsMapper.h
include/repositories/: BaseRepository.h  MarketDataRepository.h  OrderRepository.h  TradeRepository.h  TradingSignalRepository.h  UserRepository.h  UserSettingsRepository.h
include/secure/: CryptoAuditor.h  EncryptionManager.h  IpWhitelistManager.h  KeyGenerator.h  SecurityPolicy.h  SensitiveDataHandler.h
include/utils/: Config.h  JsonUtils.h  Logger.h  MigrationManager.h
migrations/: README.md  V0_init.sql  V1__schema_version.sql  V2__initial_schema.sql
scripts/: run_dev.sh  run_prod.sh
sql/: init.sql
src/: main.cpp
src/containers/: LockFreeContainerFactory.h  LockFreeContainers.cpp  LockFreeMapImpl.h  LockFreeQueueImpl.h  LockFreeStackImpl.h
src/controllers/: HealthController.cpp
src/memory/: MemoryPoolImpl.h  PoolMemeryResource.cpp
src/models/: MarketData.cpp  ModelManager.cpp  Order.cpp  Trade.cpp  TradingSignal.cpp  User.cpp  UserSettings.cpp
src/models/factories/: MarketDataFactory.cpp  OrderFactory.cpp  TradeFactory.cpp  TradingSignalFactory.cpp  UserFactory.cpp  UserSettingsFactory.cpp
src/models/mappers/: MarketDataMapper.cpp  OrderMapper.cpp  TradeMapper.cpp  TradingSignalMapper.cpp  UserMapper.cpp  UserSettingsMapper.cpp
src/repositories/: MarketDataRepository.cpp  OrderRepository.cpp  TradeRepository.cpp  TradingSignalRepository.cpp  UserRepository.cpp  UserSettingsRepository.cpp
src/secure/: CryptoAuditor.cpp  EncyptionManager.cpp  IpWhitelistManager.cpp  KeyGenerator.cpp  SecurityPolicy.cpp  SensitiveDataHandler.cpp
src/utils/: Config.cpp  Logger.cpp  MigrationManager.cpp
tests/: CMakeLists.txt
tests/unit/: health_controller_test.cpp
tests/unit/mappers/: MarketDataMapper_test.cpp
